@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.bello" version="2.0.1" name="Bello - Beta" provider-name="Nessus">
+<addon id="skin.bello" version="2.0.2" name="Bello" provider-name="Nessus">
   <requires>
 		<import addon="xbmc.gui" version="5.0.1"/>
 		<import addon="service.skin.widgets" version="0.0.29"/>
